samples/_failures_safe/1761212522_1c00df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dee72b3a.c: In function ‘main’:
./samples/SAFE/__tmp_dee72b3a.c:145:5: error: expected expression at end of input
  145 |     if (scanf("%d", &start_node) != 1 || start_node < 0 || start_node >= num_nodes)
      |     ^~
./samples/SAFE/__tmp_dee72b3a.c:145:5: error: expected declaration or statement at end of input
